# GXEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  over.txt
examples/: triangle.cpp
gx/: CMakeLists.txt
gx/animation/: animationAction.cpp  animationAction.h  animationClip.cpp  animationClip.h  keyframeTrack.cpp  keyframeTrack.h  propertyBinding.cpp  propertyBinding.h
gx/camera/: camera.cpp  camera.h  orthographicCamera.cpp  orthographicCamera.h  perspectiveCamera.cpp  perspectiveCamera.h
gx/cameraControl/: cameraControl.cpp  cameraControl.h  gameCameraControl.cpp  gameCameraControl.h
gx/core/: attribute.h  geometry.cpp  geometry.h  object3D.cpp  object3D.h
gx/geometries/: boxGeometry.cpp  boxGeometry.h  planeGeometry.cpp
gx/global/: base.h  config.h  constant.h  eventDispatcher.cpp  eventDispatcher.h
gx/lights/: ambientLight.cpp  ambientLight.h  directionalLight.cpp  directionalLight.h  directionalLightShadow.cpp  directionalLightShadow.h  light.cpp  light.h  lightShadow.cpp  lightShadow.h
gx/loader/: assimpLoader.cpp  assimpLoader.h  cache.cpp  cache.h  cubeTextureLoader.cpp  cubeTextureLoader.h  loader.cpp  loader.h  textureLoader.cpp  textureLoader.h
gx/material/: cubeMaterial.cpp  cubeMaterial.h  depthMaterial.cpp  depthMaterial.h  material.cpp  material.h  meshBasicMaterial.cpp  meshBasicMaterial.h  meshPhongMaterial.cpp  meshPhongMaterial.h
gx/math/: box3.h  frustum.h  interpolant.cpp  interpolant.h  plane.h  sphere.h
gx/objects/: bone.cpp  bone.h  group.h  mesh.cpp  mesh.h  renderableObject.cpp  renderableObject.h  skeleton.cpp  (+3 more)
(+112 files in other folders)
